kubernetes/apps/agentgateway-system/agentgateway/app/agproxy-int-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: agentgateway-proxy
  name: agentgateway-proxy-int
  namespace: agentgateway-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: agentgateway-proxy
    app.kubernetes.io/name: agentgateway-proxy
    gateway.networking.k8s.io/gateway-name: agentgateway-proxy
  ports:
    - name: listener-80
      port: 80
      protocol: TCP
      targetPort: 80
