kubernetes/apps/agentgateway-system/agentgateway/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway-proxy
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      name: agentgateway-config
      group: agentgateway.dev
      kind: AgentgatewayParameters
  listeners:
    - protocol: HTTP
      port: 80
      name: llm
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 8001
      name: github-mcp
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 8002
      name: fetch-mcp
      allowedRoutes:
        namespaces:
          from: All
