kubernetes/apps/agentgateway-system/agentgateway/app/httproute-mcp-int.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  hostnames:
    - "mcp.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
  parentRefs:
    - name: traefik-private
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - kind: Service
          name: agentgateway-proxy-int
          namespace: agentgateway-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /mcp
