kubernetes/apps/agentgateway-system/agentgateway/app/httproute-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-int
spec:
  hostnames:
    - "mcp.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
  parentRefs:
    - name: traefik-private
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - kind: Service
          name: agentgateway-proxy-int
          namespace: agentgateway-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - "mcp.${DOMAIN}"
  parentRefs:
    - name: traefik-public
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - kind: Service
          name: agentgateway-proxy-int
          namespace: agentgateway-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
